<?xml version="1.0"?>
<package>
  <name>wit_ros_imu</name>
  <version>0.1.0</version>
  <description>The wit_ros_imu package</description>

  <maintainer email="kevin@wit-motion.com">kevin</maintainer>
  <license>BSD</license>
  <url type="website">http://www.wit-motion.cn</url>
  <url type="bugtracker">http://www.wit-motion.cn</url>
  <author email="kevin@wit-motion.com">kevin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
